--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-drag-resize": "^1.0.2",
     "react-native-gesture-handler": "^2.0.0",
     "react-native-web": "0.17.1",
     "react-resizable": "^3.0.4"
